--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,8 +2,10 @@
 const today = new Date();
 ---
 
-<footer class="bg-white h-fit">
-	<div class="mx-auto max-w-7xl overflow-hidden px-6 pt-10 pb-6">
-		<p class="mt-10 text-center text-xs leading-5 text-gray-500">&copy; {today.getFullYear()} Marvin Céspedes, CHEFPO. All rights reserved.</p>
-	</div>
+<footer class="h-fit bg-white">
+  <div class="mx-auto max-w-7xl overflow-hidden px-6 pb-6 pt-10">
+    <p class="mt-10 text-center text-xs leading-5 text-gray-500">
+      &copy; {today.getFullYear()} Marvin Céspedes, CHEFPO. All rights reserved.
+    </p>
+  </div>
 </footer>
