--- a/src/pages/recipes/index.astro
+++ b/src/pages/recipes/index.astro
@@ -6,49 +6,54 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
 import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
 
-const posts = (await getCollection('recipes')).sort(
-	(a, b) =>  b.data.pubDate.valueOf() - a.data.pubDate.valueOf()
-);
+const posts = (await getCollection('recipes')).sort((a, b) => b.data.pubDate.valueOf() - a.data.pubDate.valueOf());
 ---
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
-	</head>
-	<body class="grid grid-flow-row min-h-dvh">
-		<Header />
-		<main>
-			<div class="bg-white py-24 sm:py-32">
-				<div class="mx-auto max-w-7xl px-6 lg:px-8">
-				  <div class="mx-auto max-w-2xl lg:mx-0">
-					<h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">From the blog</h2>
-					<p class="mt-2 text-lg leading-8 text-gray-600">Learn how to grow your business with our expert advice.</p>
-				  </div>
-				  <div class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t border-gray-200 pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3">
-					{
-						posts.map((post) => (
-							<article class="flex max-w-xl flex-col items-start justify-between">
-								<div class="flex items-center gap-x-4 text-xs">
-									<time datetime={post.data.pubDate} class="text-gray-500"><FormattedDate date={post.data.pubDate} /></time>
-								</div>
-								<div class="group relative">
-									{/* <img width={720} height={360} src={post.data.heroImage} alt="" /> */}
-									<h3 class="mt-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
-									<a href={`/recipes/${post.slug}/`}>
-										<span class="absolute inset-0"></span>
-										{post.data.title}
-									</a>
-									</h3>
-									<p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600">Illo sint voluptas. Error voluptates culpa eligendi. Hic vel totam vitae illo. Non aliquid explicabo necessitatibus unde. Sed exercitationem placeat consectetur nulla deserunt vel. Iusto corrupti dicta.</p>
-								</div>
-							</article>
-						))
-					}
-				  </div>
-				</div>
-			  </div>
-		</main>
-		<Footer />
-	</body>
+  <head>
+    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+  </head>
+  <body class="grid min-h-dvh grid-flow-row">
+    <Header />
+    <main>
+      <div class="bg-white py-24 sm:py-32">
+        <div class="mx-auto max-w-7xl px-6 lg:px-8">
+          <div class="mx-auto max-w-2xl lg:mx-0">
+            <h2 class="text-3xl font-bold tracking-tight text-gray-900 sm:text-4xl">From the blog</h2>
+            <p class="mt-2 text-lg leading-8 text-gray-600">Learn how to grow your business with our expert advice.</p>
+          </div>
+          <div
+            class="mx-auto mt-10 grid max-w-2xl grid-cols-1 gap-x-8 gap-y-16 border-t border-gray-200 pt-10 sm:mt-16 sm:pt-16 lg:mx-0 lg:max-w-none lg:grid-cols-3"
+          >
+            {
+              posts.map((post) => (
+                <article class="flex max-w-xl flex-col items-start justify-between">
+                  <div class="flex items-center gap-x-4 text-xs">
+                    <time datetime={post.data.pubDate} class="text-gray-500">
+                      <FormattedDate date={post.data.pubDate} />
+                    </time>
+                  </div>
+                  <div class="group relative">
+                    {/* <img width={720} height={360} src={post.data.heroImage} alt="" /> */}
+                    <h3 class="mt-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
+                      <a href={`/recipes/${post.slug}/`}>
+                        <span class="absolute inset-0" />
+                        {post.data.title}
+                      </a>
+                    </h3>
+                    <p class="mt-5 line-clamp-3 text-sm leading-6 text-gray-600">
+                      Illo sint voluptas. Error voluptates culpa eligendi. Hic vel totam vitae illo. Non aliquid explicabo necessitatibus
+                      unde. Sed exercitationem placeat consectetur nulla deserunt vel. Iusto corrupti dicta.
+                    </p>
+                  </div>
+                </article>
+              ))
+            }
+          </div>
+        </div>
+      </div>
+    </main>
+    <Footer />
+  </body>
 </html>
